# plocka_packa

./: .gitignore  README.md  apc.cfg  drone.io
apc_cortex/: CMakeLists.txt  README.md  README_pNp.md  package.xml
apc_cortex/conf/: living_lab_arm_poses.yaml  living_lab_locations.yaml  zone_definition.yaml
apc_cortex/include/apc_cortex/: BaseMovement.h  apc_cortex.h  cortex_pick_and_place.h
apc_cortex/launch/: apc_cortex.launch  base_movement.launch  load_zones.launch  pick_and_place.launch
apc_cortex/src/: BaseMovement.cpp  apc_cortex.cpp  apc_cortex_node.cpp  apc_cortex_node_original.cpp  cortex_pick_and_place.cpp  cortex_pnp_node.cpp
apc_cortex/src/testing/: arms_cartesian_testing.cpp  base_movement_example.cpp
apc_json/: CMakeLists.txt  README.md  package.xml
apc_json/config/grasping/: champion_copper_plus_spark_plug.json  cheezit_big_original.json  crayola_64_ct.json  dr_browns_bottle_brush.json  elmers_washable_no_run_school_glue.json  expo_dry_erase_board_eraser.json  feline_greenies_dental_treats.json  first_years_take_and_toss_straw_cup.json  genuine_joe_plastic_stir_sticks.json  highland_6539_self_stick_notes.json  kong_air_dog_squeakair_tennis_ball.json  kong_duck_dog_toy.json  kong_sitting_frog_dog_toy.json  kyjen_squeakin_eggs_plush_puppies.json  laugh_out_loud_joke_book.json  mark_twain_huckleberry_finn.json  mead_index_cards.json  mommys_helper_outlet_plugs.json  munchkin_white_hot_duck_bath_toy.json  oreo_mega_stuf.json  paper_mate_12_count_mirado_black_warrior.json  rolodex_jumbo_pencil_cup.json  safety_works_safety_glasses.json  sharpie_accent_tank_style_highlighters.json  stanley_66_052.json
apc_json/data/: test.json
apc_json/launch/: apc_parser.launch  grasping.launch
apc_json/scripts/: apc_parser.py  apc_work_order.py
apc_json/src/: grasping_json_generator.py  grasping_json_server.py
apc_marker/: CMakeLists.txt  package.xml
apc_marker/launch/: apc_marker.launch
apc_marker/src/: apc_marker.cpp
apc_marker/srv/: ToolPos.srv
apc_msgs/: CMakeLists.txt  README.md  package.xml
apc_msgs/msg/: BinContents.msg  WorkOrder.msg
apc_msgs/srv/: GetBinContents.srv  GetBinInfo.srv  GetBinOrigin.srv  GetBool.srv  GetGraspStrategy.srv  GetItemFromWorkOrder.srv  GetObjectPose.srv  GetPoint.srv  GetQRCodeForRequestedItem.srv  GetRequestedItem.srv  GetWorkOrder.srv  ReturnJointStates.srv  SetBaseDistance.srv  SetBaseLocation.srv  SetBaseParameter.srv  SetBaseRotation.srv  SetBin.srv  SetBool.srv  SetDouble.srv  SetGain.srv  SetImageCrop.srv  SetLimits.srv  ToolPos.srv
apc_object_detection/: CMakeLists.txt  README.md  package.xml
apc_object_detection/cfg/: bin_filter.cfg
apc_object_detection/config/: bin7.sticky.ork  bin9.elmers.ork  bin_1_detection.ros.ork  detection.object.ros.ork  object_ids.yaml  timed.sh
apc_object_detection/include/apc_object_detection/: apc_object_detection.h
apc_object_detection/launch/: apc_object_detection.launch
apc_object_detection/scripts/: object_ids.py
apc_object_detection/src/: apc_object_detection.cpp  apc_object_detection_node.cpp  apc_ork_manager.cpp  opencv_filtering.cpp
apc_object_detection/src/testing/: bin_opencv_filtering.cpp  bin_pcl_filtering.cpp  bin_pcl_filtering_single.cpp  curl_testing.cpp  test_client.cpp
apc_pcl/: CMakeLists.txt  package.xml
apc_pcl/cfg/: passthrough_filter.yaml
apc_pcl/include/: object_detector.h
apc_pcl/launch/: alignment.launch  filter.launch  load_param.launch
apc_pcl/src/: alignment.cpp  apc_shelf_detect.cpp  example_seg.cpp  example_voxelgrid.cpp  passthrough_filter.cpp  tracking_sample.cpp
apc_robot/: CMakeLists.txt  README.md  package.xml
apc_robot/cfg/: asus_sensor.yaml  baxter.srdf  conf.rviz  gain_definition.yaml  kinematics.yaml  origin_tf_config.yaml  robot.yaml
apc_robot/include/apc_robot/: apc_arms_cartesian.h  apc_arms_joint.h  apc_base_driver.h  apc_baxter_commander.h  apc_robot_grippers.h  apc_robot_moveit.h  base.h  pr2_head.h  pr2_torso.h
apc_robot/launch/: apc_robot.launch  arms_cartesian.launch  pr2_moveit.launch  pr2_srdf.launch  robot.launch  testing_node.launch
apc_robot/launch/old/: apc_baxter.launch  asus.launch  baxter_description_semantic.launch  gripper_action_server.launch  kinematic_model.launch  moveit_demo_baxter.launch  moveit_planning_context.launch
apc_robot/scripts/: joint_states_listener.py
apc_robot/src/: apc_arms_cartesian.cpp  apc_arms_joint.cpp  apc_base_driver.cpp  apc_robot_grippers.cpp  apc_robot_moveit.cpp  base.cpp  origin_tf_publisher.cpp  pr2_head.cpp  pr2_torso.cpp  print_cartesian_pose.cpp  print_joint_states.cpp  print_state.cpp
apc_robot/src/old/: apc_baxter_commander.cpp  kinect_tf_publisher.cpp  odom_pcl_limit.cpp  origin_camera_tf_publisher.cpp
apc_shelf/: CMakeLists.txt  package.xml
apc_simulator/: CMakeLists.txt  README.md  package.xml
apc_simulator/cfg/: baxter_and_kinect.rviz  moveit_baxter.rviz
apc_simulator/launch/: apc_simulator_baxter.launch  apc_simulator_pr2.launch  rviz_baxter.launch  spawn_objects.launch
apc_simulator/launch/pr2_gazebo_launch/: pr2_empty_world_FIXED.launch  pr2_empty_world_part1.launch  pr2_empty_world_part2.launch
apc_simulator/models/kinect_model/: model.config  model.sdf
apc_simulator/models/kiva_pod/: model.sdf
apc_simulator/models/kiva_pod/meshes/: pod_lowres.stl
apc_simulator/models/table_small/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
apc_simulator/models/wooden_bin/: model.config  model.rsdf  model.sdf
apc_simulator/scripts/: export_models.sh  install_models.sh
apc_simulator/src/: kinect_tf_publisher.cpp
apc_simulator/worlds/: apc.world  shelf.world
apc_vacuum/: CMakeLists.txt  README.md  contributors.txt  package.xml
apc_vacuum/APC/: APC.ino
apc_vacuum/src/: comm.cpp  serial_read.cpp
apc_vacuum/srv/: ValveCtrl.srv
apc_workspace/: CMakeLists.txt  hosts  package.xml  ros_synchronization.md
apc_workspace/conf/: apc_object_recog.rosinstall
apc_workspace/ork/: detection.ros.ork  training.ork
apc_workspace/scripts/: object_load_database.sh  object_load_database_tod.sh
(+15 files in other folders)
