<?xml version="1.0"?>
<package>
  <name>apc_cortex</name>
  <version>0.0.0</version>
  <description>The apc_cortex package</description>
  <maintainer email="sven.cremer@mavs.uta.edu">Sven Cremer</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>apc_robot</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>apc_msgs</build_depend>
  <build_depend>pr2_common_action_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  
  <run_depend>apc_robot</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>apc_msgs</run_depend>
  <run_depend>pr2_common_action_msgs</run_depend>
  <run_depend>actionlib</run_depend>

</package>
