<?xml version="1.0"?>
<package>
  <name>apc_json</name>
  <version>0.0.0</version>
  <description>The apc_json package</description>
  <maintainer email="sven.cremer@mavs.uta.edu">Sven Cremer</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>apc_msgs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>apc_msgs</run_depend>
</package>
