<?xml version="1.0"?>
<package>
  <name>apc_marker</name>
  <version>0.0.0</version>
  <description>The apc_marker package</description>
  <maintainer email="fahad.mirza34@mavs.uta.edu">Fahad Mirza</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>ar_track_alvar</build_depend>
  <run_depend>ar_track_alvar</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  
  <build_depend>apc_msgs</build_depend>
  <run_depend>apc_msgs</run_depend>

</package>
