<?xml version="1.0"?>
<package>
  <name>apc_vacuum</name>
  <version>0.0.0</version>
  <description>The apc_vacuum package</description>
  <maintainer email="fahad.mirza34@mavs.uta.edu">Fahad Mirza</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  
  <build_depend>cmake_modules</build_depend>
  <run_depend>cmake_modules</run_depend>
  
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>serial</build_depend>
  <run_depend>serial</run_depend>
 
</package>
