cmake_minimum_required(VERSION 2.8.3)
project(apc_workspace)

find_package(catkin REQUIRED)

###################################
## catkin specific configuration ##
###################################
catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES apc_workspace
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)